# plhw4make

./: Makefile.am  Makefile.in  README.MD  configure  configure.ac  func.c  header.h  main.c
